ACCUMULO-4046 Apply changes identified by modernizer
* Applies all modernizer changes to 1.6 branch (jdk 1.6 recommendations)
* Re-run findbugs (with jdk 1.7, findbugs 3.0.3) and fix recommendations